--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,5 @@ author:
 
 paginate:         3
 
-# Custom vars
-version:          2.1.0
-
 github:
-  repo:           https://github.com/poole/hyde
+  repo:           https://github.com/CCADynamicsGroup/ccadynamicsgroup.github.io
